--- a/serverless.yml
+++ b/serverless.yml
@@ -22,7 +22,8 @@ frameworkVersion: '3'
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs16.x
+  region: sa-east-1
 
 # you can overwrite defaults here
 #  stage: dev
@@ -59,15 +60,16 @@ provider:
 #    - include-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  view-repositories:
+    handler: view-repositories.handle
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
-#    events:
-#      - httpApi:
-#          path: /users/create
-#          method: get
+    events:
+      - httpApi: 'GET /repositories/barbararech'
+          # path: /repositories/barbararech
+          # method: get
+          # cors: true
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
