refactor: refactor the function that processes the data

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "root": true,
     "parserOptions": {
       "sourceType": "module"
+    },
+  "rules": {
+    "camelcase": "off"
   }
   }
 }
